# lego-sorter-bin-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  camera_test.html  debug_issues.py  docker-compose.traefik.yml  extract_faces.py  extract_key_params.py  pyproject.toml  verify_approach.py  verify_approach2.py  verify_rewrite.py
.claude/: CLAUDE.md
lasercut-rs/: Cargo.toml
lasercut-rs/src/: exporter.rs  face_classifier.rs  finger_joints.rs  layout.rs  lib.rs  main.rs  math_utils.rs  projector.rs  step_loader.rs  types.rs  verification.rs
src/lasercut/: __init__.py  __main__.py  cli.py  exporter.py  face_classifier.py  finger_joints.py  finger_joints_cadquery.py  focus_card.py  joints.py  kerf_test.py  overlap_diff.py  panels.py  projector.py  step_loader.py  verification.py  web.py
step_files/: bin_full.step  bin_half_left.step  bin_half_right.step  bin_third_center.step  bin_third_left.step  bin_third_right.step
