[project]
name = "lasercut"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.4.0",
    "cq-warehouse",
    "shapely>=2.0",
    "svgwrite>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lasercut"]

[tool.uv.sources]
cq-warehouse = { git = "https://github.com/gumyr/cq_warehouse.git" }
