[package]
name = "lasercut"
version = "0.1.0"
edition = "2021"

[dependencies]
# STEP loading via OpenCASCADE
opencascade-sys = "0.2"

# 2D geometry
geo = "0.29"
i_overlay = "1"

# SVG export
svg = "0.18"

# DXF export
dxf = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
anyhow = "1"
